--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -56,13 +56,13 @@
 }
 
 .team-overlay {
-  width: 1278px;
-  height: 700px;
+  width: 1578px;
+  height: 500px;
   flex-shrink: 0;
   opacity: 0.8;
   background: var(--fill, conic-gradient(from 89deg at 100.96% 31.6%, #006FFF 0deg, #FF00E5 304.2deg));
   filter: blur(60px);
-  position: absolute;
+  position: center;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
