--- a/src/styles/AboutUs.css
+++ b/src/styles/AboutUs.css
@@ -31,6 +31,7 @@
   background: url('../image/AboutUs-Ellipse.png') no-repeat center center;
   background-size: contain; /* Maintains original proportions */
   z-index: -1; /* Sends the background image behind the text */
+  pointer-events: none;
 }
 
 .about-us-sections {
