--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -1,4 +1,3 @@
-/* Header.css */
 .header {
   display: flex;
   justify-content: space-between;
@@ -14,6 +13,15 @@
   font-weight: 700;
   font-size: 1.5rem; /* Use relative units for scalable typography */
   margin-bottom: 10px; /* Add spacing for smaller devices */
+}
+
+.header-title a {
+  color: #ffffff;
+  text-decoration: none; /* Remove underline */
+}
+
+.header-title a:hover {
+  text-decoration: none; /* Ensure no underline on hover */
 }
 
 .header-nav {
@@ -54,7 +62,7 @@
   position: absolute;
   top: 100%;
   right: 0;
-  background-color: white;
+  background-color: #040a11;
   border: 1px solid #ccc;
   border-radius: 4px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -66,13 +74,13 @@
 .dropdown-item {
   padding: 10px;
   display: block;
-  color: black;
+  color: rgb(255, 255, 255);
   text-decoration: none;
   cursor: pointer;
 }
 
 .dropdown-item:hover {
-  background-color: #f0f0f0;
+  background-color: #661ce7;
 }
 
 /* Media Queries for Responsiveness */
@@ -101,7 +109,6 @@
 
   .header-user a {
     top: 10px;
-    font-size: 0.9rem; /* Adjust font size */
   }
 
   .user-menu {
