--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -139,53 +139,80 @@
 
 @media (max-width: 768px) {
   .home-page {
-    padding: 10px; /* Add some padding to prevent content from touching edges */
+    padding: 10px;
   }
 
   .home-title {
-    font-size: 1.8rem; /* Slightly smaller font size for titles */
+    font-size: 1.8rem;
     text-align: center;
   }
 
   .info-section {
     flex-direction: column;
-    gap: 20px; /* Reduce gap between items */
-    align-items: center; /* Center-align for better presentation */
+    gap: 20px; 
+    align-items: center; 
   }
 
   .info-box {
-    width: 90%; /* Make it responsive to screen size */
-    height: auto; /* Allow flexible height */
-    padding: 20px; /* Add some padding inside */
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Slight shadow for better visual separation */
+    width: 90%; 
+    height: auto; 
+    padding: 20px; 
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); 
   }
 
+  .info-box img {
+    width: 100%;
+    height: 100%;
+  }
+
+  .info-box .background-image {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+  }
+
+  .info-kje-special {
+    position: relative;
+    width: 160px;
+    height: 50px;
+    padding-top: 10px;
+    padding-left: 40px;
+    text-align: right;
+  }
+
+  .info-box .info-content2 {
+    padding-bottom: 20px;
+}
+
   .info-box h2 {
-    font-size: 1.5rem; /* Adjust title size */
-    margin-left: 0; /* Align text properly for smaller boxes */
+    font-size: 1.5rem; 
+    margin-left: 0; 
   }
 
   .info-box p {
-    font-size: 1rem; /* Smaller text size for better readability */
-    margin-left: 0; /* Remove unnecessary margin */
-    text-align: center; /* Center-align text */
+    font-size: 1rem; 
+    margin-left: 0; 
+    text-align: center; 
   }
 
   .login-button {
-    width: 80%; /* Make button scale with screen */
-    max-width: 300px; /* Set a limit for button width */
-    height: 60px; /* Reduce height */
-    font-size: 1.2rem; /* Adjust font size */
-    margin: 10px auto; /* Center the button */
-    background-size: contain; /* Ensure the image fits nicely within the button */
+    width: 80%; 
+    max-width: 300px; 
+    height: 60px; 
+    font-size: 1.2rem; 
+    margin: 10px auto; 
+    background-size: contain; 
   }
 
   .login-button .background-image {
     position: relative;
-    top: 0;
-    left: 0;
-    width: 100%; /* Ensure background fits button size */
-    height: 100%;
+    top: -300%;
+    left: -100%;
+    width: 150%; 
+    height: 150%;
     z-index: -1;
   }
 }
