--- a/src/styles/TebInfo.css
+++ b/src/styles/TebInfo.css
@@ -2,7 +2,7 @@
   padding: 20px 5vw; /* Flexible padding for responsiveness */
   color: #ffffff;
   font-family: "Poppins", sans-serif;
-  max-width: 1200px; /* Limit max width */
+  max-width: 1000px; /* Limit max width */
   margin: 0 auto; /* Center the content */
 }
 
@@ -10,7 +10,7 @@
   font-size: 1.5rem; /* Scalable font size */
   font-weight: 700;
   color: #ffffff;
-  text-align: right; /* Align text to the right */
+  text-align: center; /* Align text to the center */
   margin-bottom: 20px;
 }
 
