fixed login,register and header

--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -107,6 +107,10 @@
     font-size: 0.9rem; /* Reduce font size */
   }
 
+  .header-user {
+    margin-top: 10px;
+  }
+
   .header-user a {
     top: 10px;
   }
