--- a/src/styles/Login.css
+++ b/src/styles/Login.css
@@ -30,7 +30,7 @@
 .input-group input {
   width: 100%;
   height: 50px;
-  padding: 10px 40px 10px 15px;
+  padding: 10px 0px 10px 15px;
   font-size: 1rem; /* Scalable font size */
   border: none;
   border-radius: 8px;
@@ -43,6 +43,10 @@
   position: absolute;
   right: 15px;
   color: #333;
+}
+
+.input-icon[data-unique="true"] {
+  padding-bottom: 20px;
 }
 
 .button-group {
