--- a/src/styles/teb_register_team.css
+++ b/src/styles/teb_register_team.css
@@ -68,7 +68,7 @@ h3 {
   width: 100%;
 }
 
-input[type="text"] {
+input[type="register-text"] {
   width: 80%;
   max-width: 400px;
   padding: 10px;
